--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  color: var(--second-text-color);
 }
 .header-mail {
   font-weight: 500;
@@ -107,12 +108,9 @@ body {
 }
 .hero-btn {
   cursor: pointer;
-
+}
 /*-------------PECULIARITIES------------- */
 
-.item {
-  list-style: none;
-}
 .peculiaritie-title {
   font-weight: 700;
   font-size: 14px;
